--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -4,6 +4,8 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
+  margin-bottom: 10px;
+  transition: all 0.5s ease-in-out;
 }
 
 .movieItem {
@@ -16,6 +18,7 @@
   border-radius: 5px;
   box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
   color: black;
+  transition: all 0.5s ease-in-out;
 }
 
 .movieItem img {
@@ -26,21 +29,41 @@
 }
 
 .movieItem .movie-title {
+  display: flex;
+  align-items: center;
   height: 48px;
   font-size: 14px;
   font-weight: 500;
   line-height: 1.5;
   padding: 0 10px;
-  text-overflow: ellipsis;
+  color: black;
 }
 
 .score {
   position: absolute;
-  bottom: 55px;
+  bottom: 35px;
   right: 3px;
-  width: 50px;
-  border: 1px solid black;
-  border-radius: 4px;
+  width: 35px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  color: black;
   background-color: #fff;
+  font-size: 12px;
+  font-weight: bold;
   text-align: center;
+}
+.score svg {
+  width: 14px;
+  height: 14px;
+  fill: rgb(245, 197, 24);
+}
+
+.ipc-icon {
+  vertical-align: middle;
+  color: rgb(245, 197, 24);
 }
