--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -2,9 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
-  background-color: #050ce0;
+  padding: 16px 40px;
+  background-color: #050ce058;
   color: #fff;
+  border-bottom: 1px solid rgb(124, 113, 113);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 .nav {
@@ -12,12 +13,25 @@
   gap: 10px;
   font-size: 1.5rem;
   a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 50px;
     color: white;
+    border: 1px solid rgb(124, 113, 113);
+    border-radius: 25px;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
+      rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
     font-weight: bold;
     text-decoration: none;
+    transition: all 0.3s ease-in-out;
   }
   .active {
-    text-decoration: underline;
-    color: black;
+    color: rgba(68, 66, 70, 0.704);
+    background-color: #eb4f37;
+    box-shadow: inset rgba(9, 30, 66, 0.25) 0px 1px 1px,
+      inset rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+    transition: all 0.3s ease-in-out;
   }
 }
