App styles updated

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
   margin: 0;
   /* display: flex;
   place-items: center; */
-  min-width: 320px;
+  min-width: 550px;
   min-height: 100vh;
 }
 
@@ -39,6 +39,7 @@ ul {
 }
 
 img {
+  display: block;
   max-width: 100%;
   height: auto;
 }
