--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -9,6 +9,7 @@
 }
 
 .movieItem {
+  width: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -22,7 +23,6 @@
 }
 
 .movieItem img {
-  height: 292px;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
   object-fit: cover;
