--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -39,20 +39,47 @@
   align-items: center;
   justify-content: start;
   font-size: 16px;
-  list-style-type: disc;
+  list-style: disc;
   padding: 5px 0;
   margin-bottom: 10px;
 }
 
-.movie-short-info li:nth-child(1) {
-  list-style: none;
-}
-
 .movie-short-info li {
+  position: relative;
+  display: flex;
+  align-items: center;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   color: black;
+}
+
+.movie-short-info li:nth-child(1) {
+  gap: 5px;
+}
+
+.movie-short-info li:nth-child(2)::before,
+.movie-short-info li:nth-child(3)::before {
+  content: '•';
+  display: flex;
+  align-items: center;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: -20px;
+  font-size: 1.1em;
+  line-height: 1;
+}
+
+.certification {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45px;
+  height: 35px;
+  border: 1px solid rgb(227, 227, 227);
+  border-radius: 5px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .movie-genres {
@@ -76,6 +103,28 @@
 .movie-add-info-list {
   display: flex;
   gap: 10px;
+}
+
+.movie-add-info-item a {
+  width: 100px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  border: 1px solid rgb(227, 227, 227);
+  border-radius: 5px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  justify-content: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  cursor: pointer;
+  color: black;
+  text-decoration: none;
+}
+
+.movie-add-info-item a:active,
+.movie-add-info-item a:focus {
+  background-color: rgb(245, 197, 24);
 }
 
 .score {
