--- a/src/components/MovieReviews/MovieReviews.module.css
+++ b/src/components/MovieReviews/MovieReviews.module.css
@@ -54,6 +54,7 @@
   font-weight: 500;
   line-height: 1.5;
   padding-top: 5px;
+  margin-top: 10px;
   padding-bottom: 5px;
   border-top: 1px solid rgb(124, 113, 113);
   border-bottom: 1px solid rgb(124, 113, 113);
