--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -5,11 +5,9 @@
   justify-content: center;
   gap: 10px;
   margin-bottom: 10px;
-  transition: all 0.5s ease-in-out;
 }
 
 .movieItem {
-  width: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -19,24 +17,33 @@
   border-radius: 5px;
   box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
   color: black;
-  transition: all 0.5s ease-in-out;
 }
 
 .movieItem img {
+  display: block;
+  width: 235px;
+  height: 327px;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
   object-fit: cover;
 }
 
 .movieItem .movie-title {
-  display: flex;
-  align-items: center;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  align-content: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
   height: 48px;
   font-size: 14px;
   font-weight: 500;
-  line-height: 1.5;
+  line-height: 1.6;
   padding: 0 10px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
   color: black;
+  background-color: #fff;
 }
 
 .score {
@@ -56,6 +63,7 @@
   font-size: 12px;
   font-weight: bold;
   text-align: center;
+  transition: all 0.5s ease-in-out;
 }
 .score svg {
   width: 14px;
